# grpc-calculator

./: CMakeLists.txt  client.cpp  server.cpp
proto/: calculator.proto  ping.proto
src/: client.cpp  constants.hpp  server.cpp
